Refactored Cottontail DB into three modules: cottontaildb-core, cottontaildb-dbms and cottontaildb-cli